# mwax_user_tools

./: .gitignore  README.md
beamformer_testing/: CMakeLists.txt  README.md  fold_and_plot.sh  fold_vdif.c  fold_vdif_cumulative.c  plot.c  plot.h  stats.c
beamformer_testing/build_test_subfile/: Makefile  README.md  build_test_subfile.sh  build_test_subfile_128T.sh  build_test_subfile_128T_v2_delays.sh  make_delayed_tones_plus_noise.c  make_test_subfile.c  make_test_subfile_v2_delay_tables.c  min_v2_header.txt  min_v2_header_128T.txt
beamformer_testing/iansm_fold_vdif/: README.md  fold_vdif.c  fold_vdif_cumulative.c  plot.c  stats.h
dspsr/: Dockerfile  README.md
reinterleave_subfile/: Makefile  README.txt  reinterleave_subfile.c
utils/mwax_update_subfile_header/: Makefile  README.md  mwax_update_subfile_header.c
